--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="row">
               <div class="col-lg-4">
                 <div class="thumbnail">
-                  <a href="https://github.com/KamalSekharTenneti/TXON_01.git" target="_blank">
+                  <a href="https://kamalsekhartenneti.github.io/TXON_01/" target="_blank">
                     <div class="thumbnail-hover text-center">
                       <i class="fa fa-eye fa-4x"></i>
                     </div>
